form textarea active highlight jump fix, update description icon to MD spec

--- a/css/material_admin.css
+++ b/css/material_admin.css
@@ -8711,6 +8711,9 @@ input[type='search']:not(.browser-default) {
   max-width: 100%; }
 
 textarea.materialize-textarea {
+  border-top: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
   padding: .8rem .5rem 1.6rem;
   width: inherit;
   max-width: 95%; }
@@ -9327,7 +9330,7 @@ table.highlight > tbody > tr:hover {
     cursor: pointer; }
 
 table.highlight > tbody > tr.region-title:hover {
-  background: #E3F2FD !important; }
+  background: #f5f5f5 !important; }
 
 td.is-active {
   background-color: transparent; }
@@ -9343,8 +9346,8 @@ table {
     table .collection .collection-item {
       background: inherit; }
   table .region-title {
-    background: #E3F2FD;
-    color: #9e9e9e; }
+    background: #f5f5f5;
+    color: #616161; }
     table .region-title .button.button--small {
       font-size: 0.85em; }
     table .region-title td {
@@ -9360,6 +9363,11 @@ table thead th {
   font-weight: normal; }
   table thead th a {
     color: #000000; }
+
+tr.region-empty {
+  background: #FFFFFF; }
+  tr.region-empty:hover {
+    background: #FFFFFF !important; }
 
 .tablesort.tablesort--asc {
   background-image: none; }
@@ -9399,6 +9407,7 @@ table tbody tr.drag {
     background: #fff9c4 !important; }
 
 .draggable {
+  background: #FFFFFF;
   min-height: 30px; }
   .draggable a.tabledrag-handle {
     display: inline-block;
